change to mapstruct